tests/ui/g-route-intra-arm-duplicate-label.stderr
error[E0080]: evaluation panicked: parallel frontier logical labels must be unique
 --> src/g.rs
  |
  |     const { validate_choreography::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project::<1, hibana::g::Route<hibana::g::Par<hibana::g::Send<0, 1, hibana::g::Msg<9, ()>>, hibana::g::Send<2, 1, hibana::g::Msg<9, ()>>>, hibana::g::Send<0, 1, hibana::g::Msg<10, ()>>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_choreography::<Route<Par<hibana::g::Send<0, 1, Msg<9, ()>>, hibana::g::Send<2, 1, Msg<9, ()>>>, hibana::g::Send<0, 1, Msg<10, ()>>>>`
 --> src/g.rs
  |
  |         panic_choreography_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |             panic!("parallel frontier logical labels must be unique")
  |             --------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     const { validate_choreography::<Steps>() };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project::<1, Route<Par<hibana::g::Send<0, 1, Msg<9, ()>>, hibana::g::Send<2, 1, Msg<9, ()>>>, hibana::g::Send<0, 1, Msg<10, ()>>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
